--- a/css/article2.css
+++ b/css/article2.css
@@ -36,12 +36,12 @@ div.base {
   .season_title {
     width: 265px;
     height: 242px;
-    font-size: 36px;
-    font-weight: 400;
+    font-size: 36px !important;
+    font-weight: 400 !important;
     text-align: center;
-    line-height: 242px;
+    line-height: 242px !important;
     color: #ffffff;
-    margin: 0 10px 0 0;
+    margin: 0 10px 0 0 !important;
   }
 
   .spring {
